Final version all tests working